# Migochat

./: .coverage  .flake8  .gitignore  AI_MODELS_UPGRADE.md  BWW_STORE_COMPLETE_SUMMARY.md  BWW_STORE_ENHANCEMENT_SUMMARY.md  BWW_SUPREME_QUALITY_FINAL.md  CHANGELOG.md  CODE_AUDIT_REPORT.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  CRITICAL_FIXES_REPORT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOYMENT_READY_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  ENDPOINTS_AUDIT_REPORT.md  FINAL_ENHANCEMENTS_REPORT.md  NEXT_STEPS.md  PROJECT_FIXES_SUMMARY.md  PROJECT_STATUS.md  RAILWAY_DEPLOYMENT_STEPS.md  RAILWAY_ENV.md  RAILWAY_FIXES_REPORT.md  README.md  TESTING_REPORT.md  TEST_SUITE_SUMMARY.md  check_logic_errors.py  coverage.xml  env.md  fix_all_errors.py  production_test_railway.ps1  project.md  pyrightconfig.json  pytest.ini  requirements.txt  run.py
Server/: QUICKSTART.md  README.md  __init__.py  config.py  config_manager.py  main.py  run.py
Server/routes/: __init__.py  api.py  dashboard.py  service_helpers.py  settings_api.py  user_update_helpers.py  webhook.py
app/: __init__.py  database.py  database_context.py  database_manager.py
app/models/: __init__.py
app/services/: __init__.py  bootstrap.py
app/services/ai/: __init__.py  ai_service.py  gemini_service.py  product_recommender.py
app/services/business/: __init__.py  facebook_lead_center_service.py  keyword_manager.py  message_source_tracker.py
app/services/core/: __init__.py  base_service.py  interfaces.py
app/services/infrastructure/: __init__.py  configuration_manager.py  di_container.py  error_handler.py  service_registry.py  settings_manager.py
app/services/messaging/: __init__.py  message_handler.py  messenger_service.py  platform_messaging_service.py  whatsapp_service.py
app/static/: __init__.py
app/static/css/: crm-advanced.css  dashboard.css  style.css
app/static/js/: crm-utils.js  crm.js  dashboard.js  leads.js  messages.js  settings.js  users.js
app/templates/: crm.html  dashboard.html  leads.html  messages.html  settings.html  users.html
bww_store/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  api_client.py  base.py  card_generator.py  client.py  comparison_tool.py  constants.py  intelligent_search.py  metrics.py  models.py  product_filters.py  product_formatter.py  product_ops.py  pyproject.toml  search.py  search_cache.py  search_strategies.py  utils.py
bww_store/docs/: API_REFERENCE.md  DEVELOPMENT.md  INDEX.md  LANGUAGE_ENHANCEMENTS.md  PRODUCTION.md  QUICKSTART.md
config/: .env.example  CONFIGURATION_GUIDE.md  README.md  README_NEW.md  SUMMARY_AR.md  __init__.py  config_manager.py  database_config.py  logging_config.py  settings.py  settings_manager.py
database/: INTEGRATION_ANALYSIS.md  README.md  __init__.py  cli.py  context.py  engine.py  enums.py  manager.py  models.py  utils.py
database/backups/: .gitkeep
database/docs/: BACKUP_RESTORE.md  MIGRATIONS.md  MODELS.md  README.md  SCHEMA.md
database/migrations/: __init__.py
database/scripts/: __init__.py  backup.py  health.py  rebuild.py
deployment/: Procfile  README.md  check.py  railway.json
docs/: BWW_STORE_ARCHITECTURE.md  BWW_STORE_GUIDE.md  BWW_STORE_INTEGRATION.md  BWW_STORE_QUICK_REFERENCE.md  COMPLETE_GUIDE.md  CONFIG_INTEGRATION_ANALYSIS.md  CONFIG_TESTING_SUMMARY.md  CONFIG_USAGE_EXAMPLES.md  DOCUMENTATION_ANALYSIS.md  ERRORS_RESOLUTION_REPORT.md  ERROR_FIXES_SUMMARY.md  INIT_FILES_ANALYSIS.md  PRODUCT_RECOMMENDER.md  README.md  SETTINGS_FIXES_SUMMARY.md  SETTINGS_TESTING_REPORT.md
docs/api/: Social-api.postman_collection.json
ngrok/: README.md  start.bat
scripts/: clean_cache.py  db_manager.py  fix_line_length.py  log_manager.py  run.py  setup.py  start.bat  start.ps1  start.sh  start_tunnel.ps1  test_real_queries.py
temp/: .gitkeep  original_settings.html
tests/: .coverage  README.md  README_CONFIG_TESTS.md  conftest.py  coverage.xml  integration_test.ps1  production_test_results_20251114_022332.json  pytest.ini  requirements-test.txt  run_tests.py  test_additional_models.py  test_advanced_services.py  test_bww_store.py  test_bww_store_integration.py  test_comprehensive_api.py  test_config.py  test_config_package.py  test_database.py  test_intelligent_integration.py  test_intelligent_search.py  test_language_improvements.py  test_search_precision.py  test_server.py
tests/unit/: test_database_utils.py  test_gemini_service.py  test_messenger_service.py  test_whatsapp_service.py
typings/google/: __init__.pyi  generativeai.pyi
